<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PopupWindow"
    android:background="@drawable/rect"
    android:backgroundTint="@color/mustard"

    android:gravity="center"

    >


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_you_want_to_exit"
            android:textColor="@color/almostGrey"
            android:textAlignment="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:elevation="10dp"/>

    <Button
        android:id="@+id/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rect"
        android:backgroundTint="@color/mainOrange"
        android:onClick="yesButton"
        android:fontFamily="@font/dubai_light"
        android:text="@string/yes"
        android:textColor="@color/almostGrey"
        android:layout_alignParentEnd="true"

        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:textSize="15sp"
        android:elevation="10dp"/>

    <Button
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@drawable/rect"
        android:backgroundTint="@color/mainOrange"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="20dp"
        android:elevation="10dp"
        android:onClick="noButton"
        android:text="@string/no"
        android:textColor="@color/almostGrey"
        android:fontFamily="@font/dubai_light"
        android:textSize="15sp" />


</RelativeLayout>