<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentMainOtherProfile"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/other_profile_how_can_i_help_rect">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/tell_me_how_can_i_help_you"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:fontFamily="@font/dubai_light"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_other_main_sendMessageRL"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/other_profile_message_edittext_rect"
        android:padding="15dp"
        >
        <EditText
            android:id="@+id/fragment_other_main_sendMessageEditTExt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_a_message"
            android:gravity="top"
            android:textColorHint="#BF87643E"
            android:textSize="17sp"
            android:textColor="@color/brown"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/dubai_light"
            android:background="@null"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/fragment_other_main_sendRequestButtonRL"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/other_profile_send_request"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_request"
            android:textColor="@color/almostGrey"
            android:fontFamily="@font/dubai_light"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            />
    </RelativeLayout>


</LinearLayout>