<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MailChangeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/mail_fragment_goBack_ImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/choose_gender_arrow_back"
            android:layout_marginStart="15dp"
            />
        <TextView
            android:id="@+id/mail_fragment_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong_informaition"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/dubai_medium"
            android:textColor="@color/errorColor"
            android:visibility="gone"/>
        <RelativeLayout
            android:id="@+id/mail_fragment_oldPassword_RLayout"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/edit_user_general_info_edittext_rect">
            <EditText
                android:id="@+id/mail_fragment_oldMail_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="8dp"
                android:background="@null"

                android:hint="@string/mail"
                android:textColorHint="@color/brown"
                android:textAlignment="center"
                android:textColor="@color/brown"
                android:fontFamily="@font/dubai_light"
                android:textSize="15sp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/mail_fragment_password_RLayout"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/edit_user_general_info_edittext_rect">
            <EditText
                android:id="@+id/mail_fragment_password_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@null"
                android:imeOptions="actionNext"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                android:textColorHint="@color/brown"
                android:textAlignment="center"
                android:textColor="@color/brown"
                android:fontFamily="@font/dubai_light"
                android:textSize="15sp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/mail_fragment_newMail_RLayout"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/edit_user_general_info_edittext_rect">
            <EditText
                android:id="@+id/mail_fragment_newMail_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@null"
                android:imeOptions="actionDone"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="8dp"
                android:hint="@string/new_mail"
                android:textColorHint="@color/brown"
                android:textAlignment="center"
                android:textColor="@color/brown"
                android:fontFamily="@font/dubai_light"
                android:textSize="15sp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mail_fragment_fragment_save_button_RLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/user_profile_log_out_button_rect"
            >
            <TextView
                android:paddingBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/brown"
                android:textSize="25sp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/dubai_medium"
                android:text="@string/save"/>
        </RelativeLayout>

    </LinearLayout>


</FrameLayout>