<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PhoneChangeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/phone_fragment_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/phone_fragment_goBack_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/choose_gender_arrow_back"
                android:layout_marginStart="15dp"
                />
            <TextView
                android:id="@+id/mail_fragment_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrong_informaition"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/dubai_medium"
                android:textColor="@color/errorColor"
                android:visibility="gone"/>

            <RelativeLayout
                android:id="@+id/phone_fragment_code_RL"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/edit_user_general_info_edittext_rect"
                android:visibility="gone">
                <EditText
                    android:id="@+id/phone_fragment_code_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:hint="@string/code"
                    android:textColorHint="@color/brown"
                    android:textAlignment="center"
                    android:textColor="@color/brown"
                    android:fontFamily="@font/dubai_light"
                    android:textSize="15sp"

                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/phone_fragment_new_phone_number_RLayout"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/edit_user_general_info_edittext_rect">
                <EditText
                    android:id="@+id/phone_fragment_new_phone_number_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:imeOptions="actionNext"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:hint="@string/new_phoneNumber"
                    android:textColorHint="@color/brown"
                    android:textAlignment="center"
                    android:textColor="@color/brown"
                    android:fontFamily="@font/dubai_light"
                    android:textSize="15sp"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/phone_fragment_password_RL"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/edit_user_general_info_edittext_rect">
                <EditText
                    android:id="@+id/phone_fragment_password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:imeOptions="actionNext"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/brown"
                    android:textAlignment="center"
                    android:textColor="@color/brown"
                    android:fontFamily="@font/dubai_light"
                    android:textSize="15sp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/phone_fragment_sendCode_button_RLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@drawable/user_profile_log_out_button_rect"
                >
                <TextView
                    android:paddingBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/brown"
                    android:textSize="18sp"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/dubai_medium"
                    android:text="@string/sendCode"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/phone_fragment_verify_button_RLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@drawable/user_profile_log_out_button_rect"
                android:visibility="gone"
                >
                <TextView
                    android:paddingBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/brown"
                    android:textSize="25sp"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/dubai_medium"
                    android:text="@string/verify"/>
            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>

</FrameLayout>