<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetLocationActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:layout_weight="1"

        >
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SetLocationActivity"
            />
        <ProgressBar
            android:id="@+id/set_location_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/set_location_wait_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="325dp"
            android:layout_centerHorizontal="true"
            android:text="@string/please_wait"
            android:textColor="@color/mustard"
            android:fontFamily="@font/dubai_bold"
            android:textSize="18sp"
            android:visibility="gone"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      android:gravity="center"
        android:background="@color/mustard"
        android:orientation="vertical"
        android:layout_weight="10">

        <Button
            android:id="@+id/set_location_setLocation_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_location_button_rect"
            android:onClick="goToSignUp"
            android:textColor="@color/brown"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/dubai_light"
            android:text="@string/set_Location"
            android:padding="16dp"
            />
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
           android:textColor="@color/brown"
            android:fontFamily="@font/dubai_bold"
            android:text="@string/plase_select_location_and_press_setLocation_button" />


    </LinearLayout>



</LinearLayout>