<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentMainOtherProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:orientation="vertical"
        android:scrollbarStyle="outsideInset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relativeLayout55"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/other_profile_how_can_i_help_rect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dubai_light"
                    android:padding="12dp"
                    android:text="@string/tell_me_how_can_i_help_you"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/fragment_other_main_sendMessageRL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/other_profile_message_edittext_rect"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="@+id/relativeLayout55"
                app:layout_constraintStart_toStartOf="@+id/relativeLayout55"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout55">

                <EditText
                    android:id="@+id/fragment_other_main_sendMessageEditTExt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:padding="10dp"
                    android:maxLines="5"
                    android:maxLength="2000"
                    android:background="@null"
                    android:fontFamily="@font/dubai_light"
                    android:gravity="top"
                    android:hint="@string/write_a_message"
                    android:textColor="@color/brown"
                    android:textColorHint="#BF87643E"
                    android:textSize="17sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/fragment_other_main_sendRequestButtonRL"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/other_profile_send_request"
                app:layout_constraintEnd_toEndOf="@+id/fragment_other_main_sendMessageRL"
                app:layout_constraintStart_toStartOf="@+id/fragment_other_main_sendMessageRL"
                app:layout_constraintTop_toBottomOf="@+id/fragment_other_main_sendMessageRL">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/dubai_light"
                    android:text="@string/send_request"
                    android:textColor="@color/almostGrey"
                    android:textSize="18sp" />
            </RelativeLayout>



        </LinearLayout>
    </ScrollView>








</androidx.constraintlayout.widget.ConstraintLayout>